# gui_v1

./: Cargo.toml  README.md  frame.pyi  index.html  main.py  pyproject.toml  test.py
frame_api/: __init__.py  command.py  runtime_handle.py
src/: executpy.rs  ipc_req.rs  lib.rs  py_sender.rs
src/assets/: mod.rs  py.js
