[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "frame"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "aiofiles>=24.1.0",
    "aiomultiprocess>=0.9.1",
    "isort>=5.13.2",
    "maturin>=1.9.4",
    "orjson>=3.10.15",
    "pydantic>=2.10.6",
    "websockets>=13.1",
]
[tool.maturin]
features = ["pyo3/extension-module"]
